--- a/index.html
+++ b/index.html
@@ -58,14 +58,39 @@
 		<section>
 			<h1>Hello world</h1>
 			<p>Lauren's working on another website</p>
-      <p class="the-problem-statement">
-        <span id="the-verb"></span> 
-        <span id="the-possessive">your</span>
-        <span id="the-adjective"></span>
-        <span id="the-problem-part"></span>
-        too
-        <span id="the-problem">grumpy</span>?
-        <span id="the-emotions"></span>
+      <p class="problem-statement-type-a">
+        <span class="the-verb"></span> 
+        <span class="the-possessive">your</span>
+        <span class="the-adjective"></span>
+        <span class="the-problem-part"></span>
+        <span class="the-emphasis">too</span>
+        <span class="the-problem">grumpy</span>?
+        <span class="the-emotions"></span>
+      </p>
+      <p class="problem-statement-type-b">
+        <span class="the-suggestion">Tired of</span> 
+        <span class="the-possessive">your</span>
+        <span class="the-adjective"></span>
+        <span class="the-problem">grumpy</span>
+        <span class="the-problem-part"></span>?
+        <span class="the-emotions"></span>
+      </p>
+      <p class="problem-statement-type-c">
+        <span class="the-verb"></span> 
+        <span class="the-possessive">your</span>
+        <span class="the-problem">grumpy</span>
+        <span class="the-problem-part"></span>
+         holding you back?
+        <span class="the-emotions"></span>
+      </p>
+
+
+      <p class="problem-statement-type-c">
+        <br/>
+        Then you need our magical
+        <span class="the-solution-adjective"></span>
+        <span class="the-problem-part"></span>
+        <span class="the-solution-noun"></span>!
       </p>
 		</section>
 	</div> <!-- end wrapper -->
@@ -81,6 +106,11 @@
   <script src="js/emotions.js"></script>
 
   <script>
+
+    // *****************************
+    //         PROBLEMS
+    // *****************************
+
     // placeholder object for the part we're about to choose
     var chosenPart = {};
     var chosenProblem = {};
@@ -111,63 +141,110 @@
 
     // pick a class of problems
     function randomProblem(problems) {
-      var keys = Object.keys(problems)
-      var allowedProblem = problems[keys[ keys.length * Math.random() << 0]];
-      var theProblemClass = problems[keys[ keys.length * Math.random() << 0]];
-      console.log(theProblemClass);
-      
+      var keys = Object.keys(problems);
+      var theProblemClass = keys[Math.floor(Math.random() * keys.length)];
+   
       // pick a problem from the class
-      var randomProblem = theProblemClass[Math.floor(Math.random() * theProblemClass.length)];
-      chosenProblem.problem = randomProblem;
+      var theProblem = problems[theProblemClass][Math.floor(Math.random() * problems[theProblemClass].length)];
+
+      // put the problem and its class in our object
+      chosenProblem.problem = theProblem;
+      chosenProblem.class = theProblemClass;
     };
 
     randomProblem(problems);
 
 
     // Set the part span
-    $('#the-problem-part').html(chosenPart.part);
+    $('.the-problem-part').html(chosenPart.part);
 
     // Set the verb span
     if (chosenPart.plural == true ) {
-      $('#the-verb').html("Are");
+      $('.the-verb').html("Are");
     } else {
-      $('#the-verb').html("Is");
+      $('.the-verb').html("Is");
       // and decide if we're picking a one of them (left/right)
       var randomPartSelection = [Math.floor(Math.random() * 4)];
-      console.log("random selection is" + randomPartSelection);
+      //console.log("random selection is" + randomPartSelection);
       //unless there's only ever one of this thing
       if (randomPart.count != 1) {
         if (randomPartSelection == 0) {
-          $('#the-adjective').html("one");
+          $('.the-adjective').html("one");
         } else if (randomPartSelection == 1) {
-          $('#the-adjective').html("left");
+          $('.the-adjective').html("left");
         } else if (randomPartSelection == 2) {
-          $('#the-adjective').html("right");
+          $('.the-adjective').html("right");
+        } else if (randomPartSelection == 3) {
+          $('.the-adjective').html("freakishly");
         }
       }
     };
 
-    console.log(emotions[0])
-
     // Show the verb or not
     var verbVisiblity = Math.round(Math.random());
     if (verbVisiblity != 0) {
-      $('#the-verb').hide();
-      $('#the-possessive').hide();
+      $('.the-verb').hide();
+      $('.the-suggestion').hide();
+      $('.the-possessive').hide();
       var randomEmotion = emotions[Math.floor(Math.random() * emotions.length)];
-      $('#the-emotions').html(randomEmotion);
+      $('.the-emotions').html(randomEmotion);
     }
     else {
-      $('#the-verb').show();
-      $('#the-possessive').show();
+      $('.the-verb').show();
+      $('.the-suggestion').show();
+      $('.the-possessive').show();
+    }
+
+    // Pump it up with some emphasis or not
+    var emphasisVisiblity = [Math.floor(Math.random() * 3)];
+    if (emphasisVisiblity != 0) {
+      $('.the-emphasis').show();
+      if (randomPartSelection == 1) {
+        $('.the-emphasis').html("really");
+      }
+      else if (randomPartSelection == 2) {
+        $('.the-emphasis').html("too");
+      }
+    } else {
+      $('.the-emphasis').hide();
     }
 
 
-    // Set the problem
-    $('#the-problem').html(chosenProblem.problem);
+    // Set the problem span
+    $('.the-problem').html(chosenProblem.problem);
 
     // Capaitalize the first letter in whatever we made
-    $('#the-adjective').css("textTransform","capitalize");
+    // $('#the-adjective').css("textTransform","capitalize");
+
+
+    // *****************************
+    //         SOLUTIONS
+    // *****************************
+
+    // pick a random solution that matches our problem class
+    var solutionClass = solutions[chosenProblem.class];
+    var theSolution = solutionClass[Math.floor(Math.random() * solutionClass.length)].noun;
+
+    console.log(theSolution);
+
+    // Let's grab a related adjective
+    var problemAdjectives = solutionClass.filter(function (filter) {
+      return filter.noun != theSolution &
+            filter.adjective !== null &
+            filter.adjective !== undefined
+    });
+    console.log(solutionClass);
+
+    console.log(problemAdjectives);
+
+    var theSolutionAdjective = problemAdjectives[Math.floor(Math.random() * problemAdjectives.length)].adjective;
+    console.log(theSolutionAdjective);
+
+    // Set the solution span
+    $('.the-solution-noun').html(theSolution);
+    $('.the-solution-adjective').html(theSolutionAdjective);
+
+
   </script>
 </body>
 </html>
