--- a/notes.html
+++ b/notes.html
@@ -1,5 +1,5 @@
 (Is / Are) (your) (left) PART (too / really) PROBLEM? (:O)
 
-(Tired of / got) (a) (really) PROBLEM (left) PART?
+(Tired of / got) (your / a) (really) PROBLEM (left) PART?
 
 (Is / Are) (your) PROBLEM (left) PART holding you back?
