--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
     }
 
     // Pump it up with some emphasis or not
-    var emphasisVisiblity = pickANumber(4);
-    console.log("emphasis visibility is:" + emphasisVisiblity)
+    var emphasisVisiblity = pickANumber(5);
     if (emphasisVisiblity != 0) {
       $('.the-emphasis').show();
       if (emphasisVisiblity == 1) {
@@ -263,7 +262,10 @@
         just();
       }
       else if (emphasisVisiblity == 3) {
-        $('.the-emphasis').html("kinda");
+        $('.the-emphasis').html("kinda...");
+      }
+      else if (emphasisVisiblity == 4) {
+        $('.the-emphasis').html("crazy");
       }
     } else {
       $('.the-emphasis').hide();
@@ -273,7 +275,6 @@
     // Pump it up some more with "just"
     function just() {
       var justVisibility = pickANumber(2);
-      console.log('just visibility was called' + justVisibility);
       if (justVisibility != 0) {
         $('.the-emphasis-a').show();
       } else {
@@ -285,7 +286,7 @@
     $('.the-result').html(pickFromArray(results));
 
     // What's the lead-in?
-    $('.the-intro').html(pickFromArray(intro));
+    $('.intro').html(pickFromArray(intro));
 
     // Is this a "could" statement instead of an "is" statement?
     if (pickANumber(2) != 0) {
@@ -299,7 +300,6 @@
 
     // Decide which problem statement to show
     var whichStatement = pickANumber(5);
-    console.log(whichStatement);
     $('.problem-statement').hide();
     if (whichStatement == 0) {
       $('.type-a').show();
@@ -324,7 +324,6 @@
     var firstSpan = statementArr[0];
     var capLetter = firstSpan.charAt(0).toUpperCase();
     var rest = firstSpan.substring(1);
-    console.log(capLetter + rest);
     var span;
       $('.problem-statement:visible span:visible').each(function(){
         if($(this).html() == firstSpan){
@@ -367,7 +366,19 @@
     $('.the-solution-adjective-two').html(theSolutionAdjective);
 
     // Pick a followup statement
-    $('.the-follow-up').html(pickFromArray(followup));
+    var followUpStatement = pickFromArray(followup);
+    $('.the-follow-up').html(followUpStatement);
+  
+    // fill in a bunch of follo-up options
+    if((followUpStatement).indexOf('social') != -1) {
+        $('.social-service').html(pickFromArray(social));
+      }
+    else if((followUpStatement).indexOf('part-again') != -1)   {
+      $('.part-again').html(chosenPart.part);
+    }
+    else if((followUpStatement).indexOf('to-thirty') != -1)   {
+      $('.to-thirty').html(pickANumber(31));
+    }
   </script>
 </body>
 </html>
